added pics and assigned to grid

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <div id="wrapper">
-        <div id="fish"></div>
-        <div id="map"></div>
-        <div id="vase-small"></div>
-        <div id="bamboo"></div>
-        <div id="vase-big"></div>
-        <div id="calamari"></div>
+        <div id="fish"><img src="./assets/fish-flags.png" alt=""></div>
+        <div id="map"><img src="./assets/japan-map.png" alt=""></div>
+        <div id="vase-small"><img src="./assets/vase-short.png" alt=""></div>
+        <div id="vase-big"><img src="./assets/vase-tall.png" alt=""></div>
+        <div id="bamboo"><img src="./assets/bamboo-flag.png" alt=""></div>
+        <div id="calamari"><img src="./assets/quadropus.png" alt=""></div>
     </div>
 </body>
 </html>
